--- a/package.json
+++ b/package.json
@@ -13,7 +13,17 @@
     "type": "git",
     "url": "git+https://github.com/bconnorwhite/read-md-safe.git"
   },
-  "keywords": [],
+  "keywords": [
+    "read",
+    "markdown",
+    "md",
+    "parse",
+    "safe",
+    "without",
+    "try",
+    "catch",
+    "json"
+  ],
   "files": [
     "build"
   ],
